# Book-Discounts-Refactoring-Kata

./: LICENSE  README.md
.github/workflows/: cpp.yml  csharp.yml  io.yml  java.yml  python.yml
cpp/: .gitignore  CMakeLists.txt
cpp/book_store-cmake_catch2/: README.md  test_main.cpp
cpp/book_store-cmake_catch2/include/: AbstractItem.h  AbstractItemOnOffer.h  PromotedBook.h
cpp/book_store-cmake_catch2/src/: AbstractItem.cpp  AbstractItemOnOffer.cpp  Book.cpp  PromotedBook.cpp
cpp/include/: Book.h  Cart.h  CartAble.h  DiscountVoucher.h  GiftWrapping.h
cpp/src/: Cart.cpp  DiscountVoucher.cpp  GiftWrapping.cpp
csharp/: BookStore.sln
csharp/BookStore/: Book.cs  BookStore.csproj  BookStore.sln  DiscountVoucher.cs  README.md
csharp/BookStore/src/BookStore/: AbstractItem.cs  AbstractItemOnOffer.cs  Cart.cs  CartAble.cs  GiftWrapping.cs  IllegalStateException.cs  PromotedBook.cs
csharp/BookStore/src/BookStore.Tests/: BookStore.Tests.csproj  FullCartTest.cs
io/: .gitignore  package.json
io/io/: AbstractItem.io  AbstractItemOnOffer.io  Book.io  Cart.io  CartAble.io  DiscountVoucher.io  GiftWrapping.io  PromotedBook.io
io/tests/correctness/: FullCartTest.io
java/: pom.xml
java/src/main/java/experiment_with_deep_hierarchy/: AbstractItem.java  AbstractItemOnOffer.java  (+15 more)
python/: .gitignore
python/Book-Discounts-Refactoring-Kata/bookstore/: abstract_item.py  abstract_item_on_offer.py  book.py  discount_voucher.py  gift_wrapping.py  promoted_book.py
python/Book-Discounts-Refactoring-Kata/tests/: test_fullcart.py
python/bookstore/: cart.py  cartable.py
(+32 files in other folders)
